--- a/index.html
+++ b/index.html
@@ -34,11 +34,11 @@
               </a>
             </div>
             <ul class="nav-menu-wrapper">
-              <li class="nav-menu">
-                <a href="#how-it-works-title">How It Works</a>
+              <li>
+                <a class="nav-menu" href="#how-it-works-title">How It Works</a>
               </li>
-              <li class="nav-menu"><a href="#vegetables">Vegetables</a></li>
-              <li class="nav-menu"><a href="#reviews">Reviews</a></li>
+              <li><a class="nav-menu" href="#vegetables">Vegetables</a></li>
+              <li><a class="nav-menu" href="#reviews">Reviews</a></li>
             </ul>
 
             <button class="nav-btn" type="button">Shop now</button>
@@ -226,7 +226,7 @@
       <section class="reviews-section">
         <div class="container">
           <div class="reviews-section-title">
-            <h2 id="reviews">
+            <h2 class="reviews-section-title-main" id="reviews">
               Reviews from our <span class="reviews-green">customers</span>
             </h2>
             <p class="reviews-text">
@@ -244,8 +244,8 @@
                 height="56"
               />
 
-              <h3>John Wax</h3>
-              <p>
+              <h3 class="reviews-card-name">John Wax</h3>
+              <p class="reviews-card-text">
                 These vegetables are my secret to delicious and healthy meals.
                 The quality is always at the highest level, the aroma and taste
                 are enchanting. I advise every fan of real products!
@@ -260,8 +260,8 @@
                 height="56"
               />
 
-              <h3>Victoria Romashenko</h3>
-              <p>
+              <h3 class="reviews-card-name">Victoria Romashenko</h3>
+              <p class="reviews-card-text">
                 I love how fast and fresh the vegetables are delivered. Salads
                 always turn out so appetizing, and soups are real masterpieces.
                 The quality is impeccable!
@@ -276,8 +276,8 @@
                 height="56"
               />
 
-              <h3>Ihor Trachuk</h3>
-              <p>
+              <h3 class="reviews-card-name">Ihor Trachuk</h3>
+              <p class="reviews-card-text">
                 Recently tried my fresh tomatoes and peppers - amazing! The
                 authenticity of the taste, as if from the garden directly to my
                 table. It is now my main vegetable supplier.
@@ -329,12 +329,24 @@
                   <p class="wrapper-order-social-text">
                     Follow us on our social networks:
                   </p>
-                  <ul class="social-list">
-                    <li><a href="./index.html">Instagram</a></li>
+                  <ul class="social-list-wrap">
+                    <li>
+                      <a class="social-list-link" href="./index.html"
+                        >Instagram</a
+                      >
+                    </li>
                     <li style="color: #fbfbfb">/</li>
-                    <li><a href="./index.html">Facebook</a></li>
+                    <li>
+                      <a class="social-list-link" href="./index.html"
+                        >Facebook</a
+                      >
+                    </li>
                     <li style="color: #fbfbfb">/</li>
-                    <li><a href="./index.html">Youtube</a></li>
+                    <li>
+                      <a class="social-list-link" href="./index.html"
+                        >Youtube</a
+                      >
+                    </li>
                   </ul>
                 </div>
               </div>
