--- a/index.html
+++ b/index.html
@@ -42,6 +42,29 @@
           </svg>
         </button>
       </div>
+      <!-- mobile-menu -->
+      <div class="mobile-menu" data-menu>
+        <div class="container mobile-menu-container">
+          <button class="burger-close-btn" type="button" data-menu-close>
+            <svg class="icon" width="40" height="40">
+              <use href="./images/icons.svg#icon-burger_menu_close"></use>
+            </svg>
+          </button>
+
+          <ul class="mobile-menu-wrapper">
+            <li>
+              <a class="mobile-menu-nav" href="#how-it-works-title"
+                >How It Works</a
+              >
+            </li>
+            <li>
+              <a class="mobile-menu-nav" href="#vegetables">Vegetables</a>
+            </li>
+            <li><a class="mobile-menu-nav" href="#reviews">Reviews</a></li>
+          </ul>
+          <button class="mobile-menu-btn" type="button">Shop now</button>
+        </div>
+      </div>
     </header>
     <!-- #endregion header-->
     <main>
@@ -302,7 +325,7 @@
       <!-- #endregion vegetables-->
 
       <!-- #region reviews-->
-      <section class="reviews-section hidden">
+      <section class="reviews-section">
         <div class="container">
           <div class="reviews-section-title">
             <h2 class="reviews-section-title-main" id="reviews">
@@ -313,121 +336,154 @@
               of our services and the freshness of our products.
             </p>
           </div>
-          <ul class="reviews-list">
-            <li class="reviews-card">
-              <img
-                class="reviews-photo"
-                src="./images/Jonh_Wax.png"
-                alt="John Wax"
-                width="56"
-                height="56"
-              />
-
-              <h3 class="reviews-card-name">John Wax</h3>
-              <p class="reviews-card-text">
-                These vegetables are my secret to delicious and healthy meals.
-                The quality is always at the highest level, the aroma and taste
-                are enchanting. I advise every fan of real products!
-              </p>
-            </li>
-            <li class="reviews-card">
-              <img
-                class="reviews-photo"
-                src="./images/Victoria_Romashenko.png"
-                alt="Victoria Romashenko"
-                width="56"
-                height="56"
-              />
-
-              <h3 class="reviews-card-name">Victoria Romashenko</h3>
-              <p class="reviews-card-text">
-                I love how fast and fresh the vegetables are delivered. Salads
-                always turn out so appetizing, and soups are real masterpieces.
-                The quality is impeccable!
-              </p>
-            </li>
-            <li class="reviews-card">
-              <img
-                class="reviews-photo"
-                src="./images/Ihor_Trachuk.png"
-                alt="Ihor Trachuk"
-                width="56"
-                height="56"
-              />
-
-              <h3 class="reviews-card-name">Ihor Trachuk</h3>
-              <p class="reviews-card-text">
-                Recently tried my fresh tomatoes and peppers - amazing! The
-                authenticity of the taste, as if from the garden directly to my
-                table. It is now my main vegetable supplier.
-              </p>
-            </li>
-          </ul>
+          <div class="carousel-container">
+            <ul class="reviews-list">
+              <li class="reviews-card">
+                <img
+                  class="reviews-photo"
+                  src="./images/Jonh_Wax.png"
+                  alt="John Wax"
+                  width="56"
+                  height="56"
+                />
+                <h3 class="reviews-card-name">John Wax</h3>
+                <p class="reviews-card-text">
+                  These vegetables are my secret to delicious and healthy meals.
+                  The quality is always at the highest level, the aroma and
+                  taste are enchanting. I advise every fan of real products!
+                </p>
+              </li>
+              <li class="reviews-card">
+                <img
+                  class="reviews-photo"
+                  src="./images/Victoria_Romashenko.png"
+                  alt="Victoria Romashenko"
+                  width="56"
+                  height="56"
+                />
+                <h3 class="reviews-card-name">Victoria Romashenko</h3>
+                <p class="reviews-card-text">
+                  I love how fast and fresh the vegetables are delivered. Salads
+                  always turn out so appetizing, and soups are real
+                  masterpieces. The quality is impeccable!
+                </p>
+              </li>
+              <li class="reviews-card">
+                <img
+                  class="reviews-photo"
+                  src="./images/Ihor_Trachuk.png"
+                  alt="Ihor Trachuk"
+                  width="56"
+                  height="56"
+                />
+                <h3 class="reviews-card-name">Ihor Trachuk</h3>
+                <p class="reviews-card-text">
+                  Recently tried my fresh tomatoes and peppers - amazing! The
+                  authenticity of the taste, as if from the garden directly to
+                  my table. It is now my main vegetable supplier.
+                </p>
+              </li>
+            </ul>
+          </div>
         </div>
       </section>
       <!-- #endregion reviews-->
 
       <!-- #region your order-->
-      <section class="order hidden">
+      <section class="order">
         <div class="container">
           <div class="wrapper-order">
-            <div class="wrapper-order-title">
-              <h2>
-                Fresh <span class="hw-blush">Harvest</span> Box has got you
-                covered
-              </h2>
-              <p>
-                Our boxes are packed with delicious, nutritious vegetables,
-                perfect for anyone looking to eat healthier or support local
-                farmers. Order your box today and start enjoying the best that
-                nature has to offer!
-              </p>
+            <h2 class="order-title">
+              Fresh <span class="hw-blush">Harvest</span> Box has got you
+              covered
+            </h2>
+            <p class="order-text">
+              Our boxes are packed with delicious, nutritious vegetables,
+              perfect for anyone looking to eat healthier or support local
+              farmers. Order your box today and start enjoying the best that
+              nature has to offer!
+            </p>
+          </div>
+          <div class="wrapper-order-two-blocks">
+            <div class="wrapper-order-form">
+              <h3 class="wrapper-order-form-title">
+                Ordering <span class="order-chianti">from us</span> is quick and
+                easy! Fill out <span class="reviews-green">the form</span> below
+                and we will contact you !
+              </h3>
+              <form class="order-form" name="order-form">
+                <input
+                  class="form-input"
+                  type="text"
+                  name="username"
+                  id="username"
+                  placeholder="Full name"
+                />
+                <input
+                  class="form-input"
+                  type="email"
+                  name="useremail"
+                  id="useremail"
+                  placeholder="Email"
+                />
+                <textarea
+                  class="form-textarea"
+                  name="usercomment"
+                  id="usercomment"
+                  placeholder="Comment"
+                ></textarea>
+                <button class="order-btn" type="submit">Send</button>
+              </form>
             </div>
-            <div class="wrapper-order-two-blocks">
-              <div class="wrapper-order-form">
-                <h3 class="wrapper-order-form-title">
-                  Ordering <span class="order-chianti">from us</span> is quick
-                  and easy! Fill out
-                  <span class="reviews-green">the form</span> below and we will
-                  contact you !
-                </h3>
-                Full Name<br />
-                Email<br />
-                Comment<br />
-                <button class="order-btn" type="button">Send</button>
-              </div>
-              <div class="wrapper-order-social">
+            <div class="wrapper-order-social">
+              <picture class="wrapper-order-social-picture">
+                <source
+                  media="(min-width: 1280px)"
+                  srcset="
+                    ./images/fresh_juice_d.jpg    1x,
+                    ./images/fresh_juice_d@2x.jpg 2x
+                  "
+                />
+                <source
+                  media="(min-width: 768px)"
+                  srcset="
+                    ./images/fresh_juice_t.jpg    1x,
+                    ./images/fresh_juice_t@2x.jpg 2x
+                  "
+                />
+                <source
+                  media="(max-width: 767px)"
+                  srcset="
+                    ./images/fresh_juice_m.jpg    1x,
+                    ./images/fresh_juice_m@2x.jpg 2x
+                  "
+                />
                 <img
-                  class="wrapper-order-social-picture"
-                  src="./images/fresh_juice.jpg"
+                  src="./images/fresh_juice_d.jpg"
                   alt="fresh_juice"
                   width="428"
                   height="352"
                 />
-                <div class="wrapper-order-social-list">
-                  <p class="wrapper-order-social-text">
-                    Follow us on our social networks:
-                  </p>
-                  <ul class="social-list-wrap">
-                    <li>
-                      <a class="social-list-link" href="./index.html"
-                        >Instagram</a
-                      >
-                    </li>
-                    <li style="color: #fbfbfb">/</li>
-                    <li>
-                      <a class="social-list-link" href="./index.html"
-                        >Facebook</a
-                      >
-                    </li>
-                    <li style="color: #fbfbfb">/</li>
-                    <li>
-                      <a class="social-list-link" href="./index.html"
-                        >Youtube</a
-                      >
-                    </li>
-                  </ul>
-                </div>
+              </picture>
+              <div class="wrapper-order-social-list">
+                <p class="wrapper-order-social-text">
+                  Follow us on our social networks:
+                </p>
+                <ul class="social-list-wrap">
+                  <li>
+                    <a class="social-list-link" href="./index.html"
+                      >Instagram</a
+                    >
+                  </li>
+                  <li style="color: #fbfbfb">/</li>
+                  <li>
+                    <a class="social-list-link" href="./index.html">Facebook</a>
+                  </li>
+                  <li style="color: #fbfbfb">/</li>
+                  <li>
+                    <a class="social-list-link" href="./index.html">Youtube</a>
+                  </li>
+                </ul>
               </div>
             </div>
           </div>
@@ -436,51 +492,60 @@
       <!-- #endregion your order-->
     </main>
     <!-- #region footer-->
-    <footer class="hidden">
+    <footer class="footer">
       <div class="container">
         <div class="wrapper-footer-menu">
           <div class="wrapper-footer-menu-logo">
-            <a class="title-logo" href="./index.html">
-              <img
-                class="first-part-logo"
-                src="./images/logo1.png"
-                alt="logo"
-              />
-              <img
-                class="second-part-logo"
-                src="./images/logo2.png"
-                alt="logo"
-              />
+            <a class="footer-logo" href="./index.html">
+              <svg class="icon" width="216" height="20">
+                <use href="./images/icons.svg#icon-logo"></use>
+              </svg>
             </a>
             <p class="footer-text">
               Whether you're looking for a healthy snack or a thoughtful gift,
               our fruit baskets are the perfect choice.
             </p>
           </div>
-          <ul class="footer-menu">
-            <li><a href="#how-it-works">How It Works</a></li>
-            <li><a href="#vegetables">Vegetables</a></li>
-            <li><a href="#reviews">Reviews</a></li>
-          </ul>
-          <address class="footer-contacts">
-            <p>+380 (68) 443-94-26</p>
-            <br />
-            <p>
-              1678 S. Pioneer Road Salt <br />
-              Lake City UT 84104
-            </p>
-          </address>
+          <div class="wrapper-footer-menu-nav">
+            <ul class="footer-menu">
+              <li>
+                <a class="footer-menu-link" href="#how-it-works-title"
+                  >How It Works</a
+                >
+              </li>
+              <li>
+                <a class="footer-menu-link" href="#vegetables">Vegetables</a>
+              </li>
+              <li><a class="footer-menu-link" href="#reviews">Reviews</a></li>
+            </ul>
+            <address class="footer-contacts">
+              <ul class="contacts-list">
+                <li>
+                  <a class="contacts-info" href="tel:+380684439426"
+                    >+380 (68) 443-94-26</a
+                  ><br />
+                </li>
+                <li>
+                  <p class="contacts-info">
+                    1678 S. Pioneer Road Salt <br />
+                    Lake City UT 84104
+                  </p>
+                </li>
+              </ul>
+            </address>
+          </div>
         </div>
         <div class="wrapper-footer-end">
           <ul class="footer-end">
-            <li>Privacy Policy</li>
-            <li>/</li>
-            <li>Cookie settings</li>
+            <li class="footer-end-text">Privacy Policy</li>
+            <li class="footer-end-text">/</li>
+            <li class="footer-end-text">Cookie settings</li>
           </ul>
-          <p class="footer-end">&#xa9;Green Harvest 2023</p>
+          <p class="footer-end-text">&#xa9;Green Harvest 2023</p>
         </div>
       </div>
     </footer>
     <!-- #endregion footer-->
+    <script src="./js/menu.js"></script>
   </body>
 </html>
